--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -995,11 +995,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 205,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    0.198716\n",
+      "b    0.005522\n",
+      "c    0.815461\n",
+      "d    0.706857\n",
+      "e    0.729007\n",
+      "f    0.771270\n",
+      "g    0.074045\n",
+      "h    0.358466\n",
+      "i    0.115869\n",
+      "j    0.863103\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "vector = np.random.rand(10)\n",
+    "series = pd.Series(vector, index=list(\"abcdefghij\"))\n",
+    "print(series)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8154614284548342\n",
+      "0.1987156815341724\n",
+      "b    0.005522\n",
+      "g    0.074045\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve the 3rd element of the series using the index name\n",
+    "print(series['c'])\n",
+    "\n",
+    "# Retrieve the 1st element of the series using the index number\n",
+    "print(series[0])\n",
+    "\n",
+    "# Access the 2nd and 7th elements of the series at the same time, using the index name\n",
+    "print(series[['b','g']])\n"
    ]
   },
   {
@@ -1014,11 +1063,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "0    a\n",
+      "1    b\n",
+      "2    c\n",
+      "3    d\n",
+      "4    e\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Series 1\n",
+    "data = [1, 2, 3, 4, 5]\n",
+    "series1 = pd.Series(data)\n",
+    "\n",
+    "# Series 2\n",
+    "data = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "series2 = pd.Series(data)\n",
+    "\n",
+    "combined_series = pd.concat([series1, series2])\n",
+    "print(combined_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1     1\n",
+      "2     2\n",
+      "3     3\n",
+      "4     4\n",
+      "5     5\n",
+      "6     a\n",
+      "7     b\n",
+      "8     c\n",
+      "9     d\n",
+      "10    e\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_series = combined_series.reset_index(drop=True)\n",
+    "combined_series.index = range(1, len(combined_series) + 1)\n",
+    "print(combined_series)"
    ]
   },
   {
@@ -1045,11 +1152,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 214,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of cycles:  16581\n",
+      "Time taken:  0.19650721549987793\n",
+      "Desired matrix: \n",
+      " [[ 1.88770629e-04  1.54911372e-01  5.28436483e-03  2.69086826e-01\n",
+      "   6.69150392e-03 -2.97881514e-01]\n",
+      " [ 5.09348442e-01  3.87223586e-02 -3.48577961e-01  4.26104476e-01\n",
+      "  -3.93289261e-01 -8.91401652e-01]\n",
+      " [-5.93988302e-01  3.55237679e-01 -6.32081807e-02 -1.90073506e-01\n",
+      "  -5.99995087e-01  6.02194863e-01]\n",
+      " [ 2.56908443e-01  8.41527920e-02 -1.66327802e-01 -4.78160826e-02\n",
+      "  -2.69172885e-01  5.79087798e-01]\n",
+      " [-3.30480888e-01 -2.02376717e-01 -1.56926843e-01 -1.63066774e-01\n",
+      "   8.97774376e-03 -2.90405048e-01]\n",
+      " [-2.67663664e-01 -1.23413518e-01  1.67124818e-01 -1.13277448e-01\n",
+      "   2.17478870e-01  4.62009121e-02]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "# Define the size of the matrices\n",
+    "size = 6\n",
+    "\n",
+    "# Set the loop limit\n",
+    "limit = 1000000\n",
+    "\n",
+    "# Initialize the count for number of iterations\n",
+    "count = 0\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "while True:\n",
+    "    # Generate two matrices\n",
+    "    matrix1 = np.random.random((size,size))\n",
+    "    matrix2 = np.random.random((size,size))\n",
+    "\n",
+    "    # Take the difference of the matrices\n",
+    "    diff_matrix = matrix1 - matrix2\n",
+    "\n",
+    "    # Check if all the elements on the diagonal are between -0.1 and 0.1\n",
+    "    if np.all(np.abs(np.diag(diff_matrix)) < 0.1):\n",
+    "        end_time = time.time()\n",
+    "        print(\"Total number of cycles: \", count)\n",
+    "        print(\"Time taken: \", end_time - start_time)\n",
+    "        print(\"Desired matrix: \\n\", diff_matrix)\n",
+    "        break\n",
+    "\n",
+    "    count += 1\n",
+    "    if count > limit:\n",
+    "        print(\"Desired matrix not found after \", limit, \" iterations.\")\n",
+    "        break\n"
    ]
   }
  ],
