--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -22,6 +22,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# imports, no need to edit\n",
     "\n",
@@ -36,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Explain the difference between a vector and matrix in NumPy in one sentence."
+    "A vector is an array with a single dimension (there’s no difference between row and column vectors), while a matrix refers to an array with two dimensions."
    ]
   },
   {
@@ -61,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "a_list=[x for x in np.random.randint(1,10,10)]\n",
+    "np.array(a_list)"
    ]
   },
   {
@@ -78,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.zeros((10,10),dtype=int)"
    ]
   },
   {
@@ -95,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.ones((10,10),dtype=float)"
    ]
   },
   {
@@ -112,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.ones((10,10))*9"
    ]
   },
   {
@@ -129,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.arange(5,25,3)"
    ]
   },
   {
@@ -146,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.linspace(-1,1,30)"
    ]
   },
   {
@@ -163,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.random.randint(0,30,(5,6))"
    ]
   },
   {
@@ -180,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.sort(np.random.randint(1,30,30))"
    ]
   },
   {
@@ -200,7 +215,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar=np.ones((5,10))\n",
+    "print(ar)\n",
+    "print(ar.size)\n",
+    "print(ar.shape)\n",
+    "print(ar.dtype)"
    ]
   },
   {
@@ -217,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.random.randint(0,10,(3,4,7))"
    ]
   },
   {
@@ -234,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.random.randint(1,10,20).reshape(4,5)\n"
    ]
   },
   {
@@ -251,7 +270,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_1=np.random.randint(1,4,5)\n",
+    "ar_2=np.random.randint(1,5,5)\n",
+    "ar_3=np.random.randint(0,3,4)\n",
+    "ar_4=np.random.randint(0,6,5)\n",
+    "np.hstack([ar_1,ar_2,ar_3,ar_4])"
    ]
   },
   {
@@ -269,7 +292,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "vec=np.random.randint(1,3,3)\n",
+    "mat=np.random.randint(1,4,(3,3))\n",
+    "np.vstack([vec,mat])\n"
    ]
   },
   {
@@ -277,7 +302,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15. What is the difference between \"axis=1\" and \"axis=0\" in Numpy functions? "
+    "\n",
+    "the axis arguments uses to undertake operation through the matrix elements across y or x axis.in this regard axis=1 helps to manipulate data elements in a matrix along column lines while axis=0 helps us to do manipulation along rows"
    ]
   },
   {
@@ -302,7 +328,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_1=np.random.randint(1,10,20)\n",
+    "print(ar_1)\n",
+    "x=[3,5,7]\n",
+    "ar_1[x]\n"
    ]
   },
   {
@@ -319,7 +348,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_1=np.random.randint(1,7,10)\n",
+    "ar_1[4]=100\n",
+    "print(ar_1)\n"
    ]
   },
   {
@@ -327,7 +358,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "18. Look up the concepts of *diagonal matrix* and *trace matrix* online and write a small explanation about what they are.\n"
+    "Diagonal matrix:Return specified diagonals.numpy.diagonal(a, offset=0, axis1=0, axis2=1)[\n",
+    "\n",
+    "trace matrix:Return the sum along diagonals of the array.trace numpy.trace(a, offset=0, axis1=0, axis2=1, dtype=None, out=None)\n",
+    "\n"
    ]
   },
   {
@@ -352,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.diag([1,2,3,4,5])"
    ]
   },
   {
@@ -369,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "np.random.randint(1,10,12)[3:12]"
    ]
   },
   {
@@ -393,7 +427,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_10=np.random.randint(0,10,(10,10))\n",
+    "print(ar_10)\n",
+    "ar_10[5,3]\n",
+    "ar_10[:,5:6]\n",
+    "ar_10[2:3,:]\n",
+    "ar_10[2:7,:]\n",
+    "ar_10[2:5,3:7]\n",
+    "ar_10[5:,4:]\n",
+    "ar_10[5,5]=2023\n",
+    "print(ar_10)"
    ]
   },
   {
@@ -414,7 +457,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_22=np.arange(0,50,5)\n",
+    "print(ar_22)\n",
+    "ar_22[ar_22>20]\n",
+    "ar_22[ar_22<30]\n",
+    "ar_22*5"
    ]
   },
   {
@@ -436,7 +483,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "ar_23=np.random.rand(50)\n",
+    "print(ar_23)\n",
+    "print(ar_23.mean())\n",
+    "print(ar_23.std())\n",
+    "print(np.median(ar_23))\n",
+    "print(ar_23.min())\n",
+    "print(ar_23.max())\n"
    ]
   },
   {
@@ -469,7 +522,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "df=pd.Series(['t','foo',3,4,5],index=('A','B','C','D','E'))\n",
+    "print(df)\n",
+    "# df.dtype\n"
    ]
   },
   {
@@ -486,7 +541,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "data_26={'Netherlands':'Amsterdam',\n",
+    "         'Italy':'Rome',\n",
+    "         'Ethiopia':'Addis',\n",
+    "         'Turky':'Ankara',\n",
+    "         'German':'Berlin'}\n",
+    "pd.Series(data_26)"
    ]
   },
   {
@@ -507,7 +567,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "df_27=np.random.randint(1,5,10)\n",
+    "df_27=pd.Series(df_27,index=['a','b','c','d','e','f','g','h','i','j'])\n",
+    "print(df_27[\"c\"])\n",
+    "print(df_27[0:1])\n",
+    "print(df_27[[2,7]])\n",
+    "print(df_27)"
    ]
   },
   {
@@ -526,7 +591,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "sr_28=pd.Series(np.random.randint(1,5,5))\n",
+    "print(sr_28)\n",
+    "sr_28_1=pd.Series(np.random.randint(1,5,5))\n",
+    "print(sr_28_1)\n",
+    "sr_28_2=np.concatenate([sr_28_1,sr_28])\n",
+    "print(pd.Series(sr_28_2,index=[x for x in range(1,11)]))\n"
    ]
   },
   {
@@ -553,11 +623,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 405,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.92129534e-02  5.21282024e-01 -4.64379838e-01  4.47343310e-01\n",
+      "   3.52481961e-01 -6.34183183e-01  8.88409462e-02  2.24779098e-01\n",
+      "   1.43700003e-01  7.03147082e-01]\n",
+      " [-5.24065704e-01 -2.89972134e-02  5.60511448e-01 -4.43710839e-01\n",
+      "  -1.00238525e-01  7.89179316e-01  7.13911712e-02 -9.82170250e-02\n",
+      "  -1.81366707e-01  3.27300704e-01]\n",
+      " [-1.09582129e-01  5.66419317e-01  7.06782717e-02  2.53071925e-01\n",
+      "   2.72839565e-01  5.64315430e-01  7.76760436e-01 -4.92303976e-01\n",
+      "   2.68339344e-01  2.27508024e-01]\n",
+      " [-7.26559976e-01 -3.25347871e-01  6.77584355e-01  5.86628955e-02\n",
+      "   5.92192433e-02 -4.75195262e-01 -5.80481019e-01  3.62789403e-01\n",
+      "  -7.90502823e-02  5.70610589e-01]\n",
+      " [ 9.90977772e-02  6.69239072e-01 -2.52872870e-01  2.86565835e-01\n",
+      "   8.21359721e-02 -2.58281271e-01  6.10224245e-01 -3.88896022e-02\n",
+      "  -1.44577707e-01  1.15962817e-03]\n",
+      " [ 1.87767211e-01 -6.16920217e-01 -6.31034840e-01  5.34771168e-01\n",
+      "   7.54726602e-02  6.56658166e-02 -5.78569326e-02 -4.33840858e-01\n",
+      "   9.24949787e-02 -5.84594074e-01]\n",
+      " [-2.77184022e-01 -2.69427261e-01 -4.80529715e-01  2.25500651e-01\n",
+      "  -5.97407468e-01 -8.54506440e-01 -1.09519330e-02 -5.71640022e-01\n",
+      "  -1.66284007e-01 -1.05896691e-01]\n",
+      " [ 3.89840145e-01  6.24870574e-01  5.08824082e-01  1.22997985e-01\n",
+      "   9.28206760e-03  3.05363430e-02 -6.17729674e-01  5.52455592e-02\n",
+      "   6.27919855e-01  2.71441679e-01]\n",
+      " [ 2.36577216e-01  4.71345045e-01  6.44190653e-02  7.16065547e-01\n",
+      "  -1.59840222e-01  4.66408667e-01 -5.96915864e-01 -1.83154849e-01\n",
+      "   1.94845260e-04  5.67248142e-02]\n",
+      " [-3.14574042e-01 -3.56804718e-01  1.37440279e-01 -8.13640110e-02\n",
+      "   2.45889164e-01  1.77447087e-01 -1.32263236e-01  5.72756177e-01\n",
+      "   4.97412257e-01  9.65858672e-02]]\n",
+      "[ 0.04921295 -0.02899721  0.07067827  0.0586629   0.08213597  0.06566582\n",
+      " -0.01095193  0.05524556  0.00019485  0.09658587]\n",
+      "True\n",
+      "19.247774839401245\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "import time\n",
+    "def fun():\n",
+    "        while True:\n",
+    "                m_1=np.random.rand(10,10)\n",
+    "                m_2=np.random.rand(10,10)\n",
+    "\n",
+    "                b= m_1-m_2\n",
+    "                r=np.all(-0.1<np.diag(b)) and np.all(np.diag(b)<0.1)\n",
+    "\n",
+    "                if r==True:\n",
+    "\n",
+    "                        print(b)\n",
+    "                        print(np.diag(b))\n",
+    "                        print(r)\n",
+    "                        break   \n",
+    "                else:  \n",
+    "                        continue\n",
+    "if __name__==\"__main__\":\n",
+    "        t1=time.time()\n",
+    "        fun()\n",
+    "        t2=time.time()\n",
+    "        print(t2-t1)\n",
+    "   \n",
+    "        "
    ]
   }
  ],
@@ -577,12 +711,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a94588eda9d64d9e9a351ab8144e55b1fabf5113b54e67dd26a8c27df0381b3"
+    "hash": "93abe0c30184fb20f96093f4135f34052a80558641e8231edb1496ac2c8e5b10"
    }
   }
  },
