--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -1046,7 +1046,7 @@
    "source": [
     "# YOUR CODE HERE\n",
     "import time\n",
-    "start_point = time.time()\n",
+    "starting_point = time.time()\n",
     "while True:\n",
     "    difference = np.random.rand(5, 5) - np.random.rand(5, 5)\n",
     "    # print(difference)\n",
