--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -1053,7 +1053,7 @@
     "    diagonal = np.diag(difference)\n",
     "    if (diagonal < 0.1).all() and (diagonal > -0.1).all():\n",
     "        end_point = time.time()\n",
-    "        print(\"Time it took: \", end_point - start_point)\n",
+    "        print(\"Time it took: \", end_point - starting_point)\n",
     "        print(\"The matrix is:\", diagonal)\n",
     "        break\n"
    ]
