--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -1101,18 +1101,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "count=0\n",
     "while True:\n",
     "    count+=1    \n",
     "    matrix=np.random.rand(20,20)\n",
     "    matrix2=np.random.rand(20,20)\n",
-    "    diffence=matrix-matrix2\n",
-    "    a=np.count_nonzero(diffence[ (diffence>-0.1) & (diffence<0.1)])    \n",
-    "    if a == diffence.size:      \n",
-    "        print(diffence) \n",
+    "    difference=matrix-matrix2\n",
+    "    difference=np.diag(difference)\n",
+    "    a=np.count_nonzero(difference[ (difference>-0.1) & (difference<0.1)]) \n",
+    "    #a = len(np.where((difference > -0.1) & (difference < 0.1))[0])\n",
+    "    #a = np.sum((difference > -0.1) & (difference < 0.1))    \n",
+    "    if a == difference.size:      \n",
+    "        print(difference) \n",
     "        print(count)       \n",
     "        break\n",
+    "\n",
     "\n",
     "        \n"
    ]
@@ -1140,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
